# textsum

./: .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  setup.cfg  setup.py  tox.ini
src/textsum/: __init__.py  app.py  cli.py  pdf2text.py  skeleton.py  sum_files.py  summarize.py  utils.py
